see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Jun-2010 Sam Moffatt
 # Fixed incorrect metadata in package sample

07-Jun-2010 Mark Dexter
+ New system test for featured blog ordering
# Clean up doc blocks for system tests 

04-Jun-2010 Mark Dexter
^ Improvements to SeleniumJoomlaTestCase. (Matt Thomas)

30-May-2010 Mark Dexter
# JLanguageTest fixes and improvements. Thanks Tudor Mazilu!  

28-May-2010 Mark Dexter
# Fix broken acl0001Test.php system test

27-May-2010 Mark Dexter
# Fix broken doInstall.php system test

25-May-2010 Mark Dexter
# Fix broken system tests (Matt Thomas)

19-May-2010 Mark Dexter
# Fix system test for template change

17-May-2010 Mark Dexter
# Fix up system tests for core changes
# Fix sample data test

27-Apr-2010 Mark Dexter
# Fix up system tests for language changes (Matt Thomas)
^ Add doInstall to TestSuite
# Fix acl001 for branch language change

20-Apr-2010 Mark Dexter
^ Add __call method in SeleniumJoomlaTestCase to check for PHP notices
^ Add getTraceFiles method in SeleniumJoomlaTestCase to clean up error reporting
^ Modify tests to use getTraceFiles

19-Apr-2010 Mark Dexter
^ Add checkNotices() method in SeleniumJoomlaTestCase
^ Implement checkNotices method in com_users tests

18-Apr-2010 Mark Dexter
+ New acltest (thank you Matt Thomas)
^ New methods in SeleniumJoomlaTestCase (thank you Matt Thomas)

17-Apr-2010 Mark Dexter
# Minor fix on ControlPanel0004 for language change

16-Apr-2010 Mark Dexter
+ New test for JParameter merge to test merge bug with integer 0

15-Apr-2010 Mark Dexter
# Fix up some changed language strings
# Fix doFrontendLogin to use config